[gd_scene load_steps=7 format=2]

[ext_resource path="res://Testing/Player/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://Testing/Debugger.gd" type="Script" id=2]
[ext_resource path="res://Testing/Camera.gd" type="Script" id=3]
[ext_resource path="res://Testing/CameraAttractor.gd" type="Script" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 159.5, 79.5 )

[sub_resource type="CircleShape2D" id=2]

[node name="Node2D" type="Node2D"]

[node name="StaticBody2D2" type="StaticBody2D" parent="."]
position = Vector2( -5, 438 )
scale = Vector2( 3.28496, 1.06183 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D2"]
position = Vector2( 159.5, 79.5 )
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="StaticBody2D2"]
margin_right = 319.0
margin_bottom = 159.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaticBody2D3" type="StaticBody2D" parent="."]
position = Vector2( 312, 381 )
scale = Vector2( 1.6053, 2.20429 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D3"]
position = Vector2( 159.5, 79.5 )
shape = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="StaticBody2D3"]
margin_right = 319.0
margin_bottom = 159.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaticBody2D4" type="StaticBody2D" parent="."]
position = Vector2( 318, 295 )
scale = Vector2( 0.33364, 0.108241 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D4"]
position = Vector2( 159.5, 79.5 )
shape = SubResource( 1 )
one_way_collision = true

[node name="ColorRect" type="ColorRect" parent="StaticBody2D4"]
margin_right = 319.0
margin_bottom = 159.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaticBody2D5" type="StaticBody2D" parent="."]
position = Vector2( 166, 222 )
scale = Vector2( 0.33364, 0.108241 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D5"]
position = Vector2( 159.5, 79.5 )
shape = SubResource( 1 )
one_way_collision = true

[node name="ColorRect" type="ColorRect" parent="StaticBody2D5"]
margin_right = 319.0
margin_bottom = 159.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaticBody2D6" type="StaticBody2D" parent="."]
position = Vector2( 32, 146 )
scale = Vector2( 0.33364, 0.108241 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D6"]
position = Vector2( 159.5, 79.5 )
shape = SubResource( 1 )
one_way_collision = true

[node name="ColorRect" type="ColorRect" parent="StaticBody2D6"]
margin_right = 319.0
margin_bottom = 159.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaticBody2D7" type="StaticBody2D" parent="."]
position = Vector2( 161, 49 )
scale = Vector2( 0.33364, 0.108241 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D7"]
position = Vector2( 159.5, 79.5 )
shape = SubResource( 1 )
one_way_collision = true

[node name="ColorRect" type="ColorRect" parent="StaticBody2D7"]
margin_right = 319.0
margin_bottom = 159.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaticBody2D8" type="StaticBody2D" parent="."]
position = Vector2( 439, 176 )
scale = Vector2( 0.33364, 0.108241 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="StaticBody2D8"]
position = Vector2( 159.5, 79.5 )
shape = SubResource( 1 )
one_way_collision = true

[node name="ColorRect" type="ColorRect" parent="StaticBody2D8"]
margin_right = 319.0
margin_bottom = 159.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Player" parent="." instance=ExtResource( 1 )]
position = Vector2( 160, 375 )

[node name="Debugger" type="Node" parent="."]
script = ExtResource( 2 )

[node name="MainCamera" type="Camera2D" parent="."]
position = Vector2( 160, 375 )
current = true
script = ExtResource( 3 )
target = NodePath("../Player")
debug = true
acceleration = 4.0

[node name="CameraTrigger" type="Area2D" parent="MainCamera"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="MainCamera/CameraTrigger"]
shape = SubResource( 2 )

[node name="CameraAttractor" type="Node2D" parent="."]
position = Vector2( 866, 278 )
script = ExtResource( 4 )
outer_radius = 382.353
inner_radius = 235.295
debug = true

[node name="CameraAttractor2" type="Node2D" parent="."]
position = Vector2( 278, -70 )
script = ExtResource( 4 )
outer_radius = 411.765
inner_radius = 323.53
debug = true

[connection signal="area_entered" from="MainCamera/CameraTrigger" to="MainCamera" method="_on_CameraTrigger_area_entered"]
[connection signal="area_exited" from="MainCamera/CameraTrigger" to="MainCamera" method="_on_CameraTrigger_area_exited"]
